<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical"
    tools:context=".Ciudades">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_margin="16dp"
        android:text="@string/texto_bienvenida"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bCancun"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_cancun"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/bBacalar"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_bacalar"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/bChetumal"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_chetumal"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/bIslam"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_isla"
        android:textColor="@color/black" />
</LinearLayout>