<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvGrados"
        android:layout_width="131dp"
        android:layout_height="117dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="369dp"
        android:text="@string/texto_grados"
        android:textColor="@color/white"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="301dp"
        android:text="@string/texto_ciudad"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvEstatus"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="233dp"
        android:text="@string/texto_estatus"
        android:textColor="@color/purple_500"
        android:textSize="24sp" />
</RelativeLayout>
